@@ -3203,3 +3203,11 @@ Thu Oct  7 16:06:02 PDT 1999
 (Mandrake)
 
 this is broken.  good thing it's commented out.
+
+-------------------------------------------------------------------------------
+
+Thu Oct  7 16:17:35 PDT 1999
+(Mandrake)
+
+still having a few issues with this code, but at least we're STARTING to have
+some of the arrange code for kpanel working.
